@@ -91,15 +91,24 @@ mjb.extensions=AVI DIVX MKV WMV M2TS TS RM QT ISO VOB MPG MOV MP4 M1V M2V M4V M2
 # an additional skin named "sd" is for Standard Definition displays
 mjb.skin.dir=./skins/default
 
+# Enable or disable the genre filtering configured in the mjb.xmlGenreFile
+mjb.filter.genres=false
+
 # Genres file used for consolidating/renaming genres
 mjb.xmlGenreFile=genres-default.xml
 
 # List of genres to skip when scraping video information. 
-# These genres will not be saved in the video xml files
+# These genres will not be saved in the video XML files
 mjb.genre.skip=
 
-# Categories file used for enabling/renaming catgories
+# Categories file used for enabling/renaming categories
 mjb.xmlCategoryFile=categories-default.xml
+
+# Enable or disable the rating filtering configured in the mjb.xmlRatingFile
+mjb.filter.ratings=false
+
+# Ratings/Certification file used for enabling/renaming ratings and certification
+mjb.xmlRatingFile=ratings-default.xml
 
 # Number of Days a file is considered for the NEW category
 # And number of videos to include
@@ -673,7 +682,7 @@ filmweb.id.search=filmweb
 ################################################################
 ## Kinopoisk plugin parameters
 #
-# Specifies preferred movie rating method
+# Specifies preferred movie  method
 # Valid values are: imdb, kinopoisk, average
 kinopoisk.rating=average
 
