@@ -31,6 +31,7 @@ MovieJukebox 2.4 BETA
  - Fixes defect #1861 Hebrew title breaks due to site HTML changes
  - Fixes defect #1862 forceIndexOverwrite does not update the indexes
  - Fixes defect #1863 appendLibraryToLogFile stopped working
+ - Enhancement  #1864 Jukebox properties detects changes the XML config files
  - Enhancement  #1865 Add Watched/Unwatched category
 
 MovieJukebox 2.3
